# entra-pim-mcp-server

./: .gitignore  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  test-api.ts
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-03-11-python-rewrite.md
docs/superpowers/specs/: 2026-03-11-python-rewrite-design.md
src/: auth.ts  index.ts
src/entra_pim_mcp_server/: server.py
src/tools/: activate.ts  list-eligible.ts
